nori-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__list_selection_view__tests__list_selection_model_picker_sections_width_80.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
assertion_line: 1277
expression: "render_lines_with_width(&view, 80)"
---
                                                                                
  Model                                                                         
  Select a value for this ACP session setting                                   
                                                                                
Recommended                                                                     
› 1. Opus 5 (current)     Most capable                                          
  2. Sonnet 5             Fast and capable                                      
Other                                                                           
  3. Opus 4.6             claude-opus-4-6                                       
  4. Sonnet 4.6           claude-sonnet-4-6                                     
  5. Use custom model...  Enter any model ID
