nori-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__list_selection_view__tests__list_selection_narrow_width_preserves_rows.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
expression: "render_lines_with_width(&view, 24)"
---
                        
  Debug                 
                        
› 1. Item 1             
    xxxxxxxxxx          
  2. Item 2             
    xxxxxxxxxx          
  3. Item 3             
    xxxxxxxxxx
