nori-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__list_selection_view__tests__list_selection_right_aligned_footer_hint.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
expression: "render_lines_with_width(&view, 80)"
---
                                                                                
  Select agent                                                                  
                                                                                
› 1. ElizACP (current)  Local test ACP agent                                    
                                                                                
  Press esc to dismiss.                    Recording: ○ off  Shift-Tab to enable
