nori-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__list_selection_view__tests__list_selection_spacing_with_subtitle.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
expression: render_lines(&view)
---
                                                
  Select approval mode                          
  Switch between Nori approval presets          
                                                
› 1. Read Only (current)  Nori can read files   
  2. Full Access          Nori can edit files   
                                                
  ↑/k ↓/j to navigate, enter to confirm, esc to
